Started preparing for release.

--- a/aaf_logging/CMakeLists.txt
+++ b/aaf_logging/CMakeLists.txt
@@ -10,6 +10,8 @@ find_package(catkin REQUIRED COMPONENTS
   message_generation
   std_msgs
   topological_logging_manager
+  roslaunch_axserver
+  strands_executive_msgs
 )
 
 ################################################
