--- a/aaf_simulation/package.xml
+++ b/aaf_simulation/package.xml
@@ -8,14 +8,14 @@
 
   <license>MIT</license>
 
-  
+
   <author email="jpulidofentanes@lincoln.ac.uk">Jaime Pulido Fentanes</author>
 
-  <run_depend>strands_morse</run_depend>
-  <run_depend>strands_navigation</run_depend>
-  
   <buildtool_depend>catkin</buildtool_depend>
 
+  <run_depend>mongodb_store</run_depend>
+  <run_depend>strands_morse</run_depend>
+  <run_depend>strands_navigation</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
