--- a/aaf_walking_group/CMakeLists.txt
+++ b/aaf_walking_group/CMakeLists.txt
@@ -103,3 +103,7 @@ install(DIRECTORY etc
 install(DIRECTORY www
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
+
+install(DIRECTORY doc
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+)
