--- a/aaf_bringup/package.xml
+++ b/aaf_bringup/package.xml
@@ -4,7 +4,7 @@
   <version>0.0.0</version>
   <description>The aaf_bringup package</description>
 
-  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
+  <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
   <maintainer email="marc@hanheide.net">Marc Hanheide</maintainer>
@@ -40,6 +40,12 @@
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
+
+  <run_depend>strands_bringup</run_depend>
+  <run_depend>perception_people_launch</run_depend>
+  <run_depend>mongodb_media_server</run_depend>
+  <run_depend>roslaunch_axserver</run_depend>
+
 
 
   <!-- The export tag contains other, unspecified, tags -->
