--- a/aaf_control_ui/package.xml
+++ b/aaf_control_ui/package.xml
@@ -4,7 +4,7 @@
   <version>0.0.0</version>
   <description>The aaf_control_ui package</description>
 
-  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
+  <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
   <maintainer email="marc@hanheide.net">Marc Hanheide</maintainer>
@@ -41,9 +41,13 @@
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>geometry_msgs</build_depend>
+  <build_depend>rospy</build_depend>
+  <build_depend>roslib</build_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>mongodb_media_server</run_depend>
   <run_depend>python-webpy</run_depend>
+  <run_depend>rospy</run_depend>
+  <run_depend>roslib</run_depend>
   <run_depend>strands_executive_msgs</run_depend>
   <run_depend>strands_webtools</run_depend>
 
