--- a/aaf_logging/package.xml
+++ b/aaf_logging/package.xml
@@ -44,12 +44,18 @@
   <build_depend>actionlib_msgs</build_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>roslaunch_axserver</build_depend>
+  <build_depend>strands_executive_msgs</build_depend>
   <build_depend>topological_logging_manager</build_depend>
   <run_depend>actionlib</run_depend>
   <run_depend>actionlib_msgs</run_depend>
   <run_depend>message_generation</run_depend>
+  <run_depend>strands_executive_msgs</run_depend>
+  <run_depend>roslaunch_axserver</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>topological_logging_manager</run_depend>
+  <run_depend>vision_people_logging</run_depend>
+  <run_depend>bayes_people_tracker_logging</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
